# Xoptfoil

./: AUTHORS  CHANGELOG  CMakeLists.txt  ChangeLog  FAQ  INSTALL  README  TODO  build_linux.sh  build_windows.bat  inputs.txt  packager.sh  resources.qrc  xoptfoil.pro  xoptfoil_visualizer
doc/: User_Guide.tex  all_inputs.txt
doc/example_case/: example_case.odt  example_case.tex  inputs.txt  inputs_withflap.txt
python/: airfoil.py  data.py  matplotlib_toolbarplugin.py  matplotlibplugin.py  matplotlibwidget.py  xoptfoil.py
python/test/: test_airfoil.py
src/: airfoil.py  airfoil_evaluation.f90  airfoil_operations.f90  constraints.py  constraints_dialog.py  data.py  design_converter.f90  design_plotter.f90  flaphingepoint_dialog.py  genetic_algorithm.f90  geometry.c  geometry.cpp  geometry.i  input_output.f90  input_sanity.f90  main.f90  math_deps.f90  matplotlib_toolbar.py  matplotlibplugin.py  matplotlibwidget.py  methods.py  nacagenerator_dialog.py  operatingpoint_dialog.py  operatingpoints.py  operatingpoints_dialog.py  optimization.F90  optimization_driver.f90  optimization_util.F90  optimizationsettings_dialog.py  parameterization.f90  parametrization.f90  particle_swarm.f90  plotsettings_dialog.py  settings.py  settings_dialogs.py  shape_function.py  simplex.f90  vardef.f90  xfoil_driver.f90  xfoil_inc.f90  (+5 more)
src/cpp/: constrsettings.cpp  gasettings.cpp  gui_main.cpp  initsettings.cpp  mainwindow.cpp  mainwindow.h  navigatorlist.cpp  navigatorlist.h  opersettings.cpp  opersettings.h  optsettings.cpp  psosettings.cpp  settingsbrowser.cpp  settingsbrowser.h  settingswindow.cpp  settingswindow.h  simplexsettings.cpp  xfanasettings.cpp  xfpansettings.cpp
src/fortran/: airfoil_evaluation.f90  airfoil_operations.f90  genetic_algorithm.f90  input_output.F90  input_output.f90  input_sanity.f90  main.f90  math_deps.f90  memory_util.f90  naca.f90  optimization_driver.f90  optimization_util.F90  parametrization.f90  particle_swarm.f90  simplex_search.f90  vardef.f90  xfoil_driver.f90  xfoil_inc.f90  xfoil_only.f90
src/fortran/naca456_deps/: nacax.f90  splprocs.f90
src/fortran/xfoil_deps/: blpar_inc.f90  my_equivalence.f90  xbl_inc.f90  xfoil_aero.f  xfoil_bl.f  xfoil_geom.f  xfoil_math.f
src/include/: constrsettings.h  gasettings.h  initsettings.h  optsettings.h  psosettings.h  settingsbrowser.h  settingswindow.h  simplexsettings.h  xfanasettings.h  xfpansettings.h
src/python/: xoptfoil_visualizer  xoptfoil_visualizer.py
src/test/: test_airfoil.py  test_parametrization.py
src/test/data/: not_an_airfoil_file.txt
src/test/reference_code/: Makefile  airfoil_operations.f90  math_deps.f90  parametrization.f90  test_airfoil.f90  test_hickshenne.f90  test_nacaparam.f90  xbl_inc.f90  xfoil_aero.f  xfoil_driver.f90  xfoil_math.f
src/xfoil_deps/: blpar_inc.f90  my_equivalence.f90  xbl_inc.f90  xfoil_aero.f  xfoil_bl.f  xfoil_geom.f  xfoil_math.f
src_backup/fortran/: input_output.F90  input_sanity.f90  memory_util.f90  naca.f90  optimization_driver.f90  xfoil_only.f90
src_backup/fortran/naca456_deps/: epspsi.f90
src_backup/fortran/xfoil_deps/: blpar_inc.f90  my_equivalence.f90  xfoil_geom.f
ui/: constraints.ui  flaphingepoint.ui  geneticalgorithmsettings.ui  initializationsettings.ui  mainwindow.ui  nacagenerator.ui  operatingpoint.ui  operatingpoints.ui  optimizationsettings.ui  particleswarmsettings.ui  plotsettings.ui  simplexsettings.ui  xfoilpanelingsettings.ui  xfoilsettings.ui
